added delete split feature
