# backend/openapi.json
@@ -185,6 +185,37 @@
           "splits"
         ]
       }
+    },
+    "/api/splits/{id}": {
+      "delete": {
+        "operationId": "SplitsController_delete",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageResponseDto"
+                }
+              }
+            }
+          }
+        },
+        "summary": "Delete a split",
+        "tags": [
+          "splits"
+        ]
+      }
     }
   },
   "info": {
